# ai

./: .gitignore  Modelfile  Modelfile-1k  Modelfile-2k  Modelfile-gf  index.html  package-lock.json  package.json  vite.config.js
custom-installer/: Cargo.toml  build.rs  tauri.conf.json
custom-installer/capabilities/: default.json
custom-installer/src/: index.html  main.rs
scripts/: build-custom-installer.ps1  build-signed-release.ps1  latest.example.json
src/: App.svelte  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  updater-private.key.pub
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
