[package]
name = "gemma-local-chat-installer"
version = "1.0.6"
description = "Custom installer for AI"
authors = ["santi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
winreg = "0.52"
