[package]
name = "gemma4-chat"
version = "1.0.6"
description = "Local-only AI chat desktop app"
authors = ["santi"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "gemma4_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-process = "2.3.1"
tokio = { version = "1", features = ["macros", "sync"] }
url = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.10.1"
